--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ body {
     font-size: 50px;
     text-align: center;
     font-style: italic;
+    margin: 15px 300px;
+    padding: 5px;
+    background: red;
 }
 
 .picture {
@@ -28,14 +31,35 @@ body {
 .subhead {
     font-size: 25px;
     text-decoration: underline;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#recipe_list {
+    display: block;
+    font-style: italic;
+    font-size: 14px;
+    margin-left: 670px;
+    margin-top: 50px;
+    margin-right: 630px;
+    background: lightblue;
+}
+
+#pie {
+    margin-left: 680px;
 }
 
 ul {
+    display: block;
     font-style: italic;
     font-size: 14px;
+    margin-left: 650px;
+    margin-top: 30px;
 }
 
 ol {
+    display: block;
     font-style: italic;
     font-size: 14px;
+    margin-left: auto;
 }
